@@ -22,6 +22,13 @@
 #include <sys/types.h>
 #include <sys/socket.h>
 
+ssize_t ipmi_network_sendto (int s,
+			     const void *buf,
+			     size_t len,
+			     int flags,
+			     const struct sockaddr *to,
+			     socklen_t tolen);
+
 ssize_t ipmi_network_recvfrom (int s,
 			       void *buf,
 			       size_t len,
